k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-generator
  labels:
    app: templategenerator
spec:
  type: ClusterIP
  ports:
    - name: app-port
      port: 3662
      targetPort: 3662
      protocol: TCP
  selector:
     app: templategenerator
